--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "file-loader": "^6.0.0",
-    "image-webpack-loader": "^6.0.0"
+    "image-webpack-loader": "^6.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
