Fixed session error by changing 'source' to 'class_name' in user.rb' git push origin newBills '

--- a/test/fixtures/bills.yml
+++ b/test/fixtures/bills.yml
@@ -2,15 +2,15 @@
 #
 # Table name: bills
 #
-#  id          :bigint           not null, primary key
-#  author_id   :integer          not null
-#  history_id  :integer          not null
-#  group_id    :integer
-#  description :text             not null
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
-#  cost        :decimal(7, 2)
-#  receipt_id  :integer
+#  id           :bigint           not null, primary key
+#  author_id    :integer          not null
+#  history_id   :integer          not null
+#  group_id     :integer
+#  description  :text             not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  cost         :decimal(7, 2)
+#  recipient_id :integer
 #
 
 # This model initially had no columns defined. If you add columns to the
